--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </nav>
             <!-- /SITENAV -->
 
-            <a class="primary-button" href="#">Qabulga yozilish</a>
+            <a class="primary-button" href="#cta">Qabulga yozilish</a>
         </div>
     </header>
     <!-- /HEADER SECTION-->
@@ -54,7 +54,7 @@
                     <p class="hero__text">Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan
                         kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib
                         topshiring.</p>
-                    <a class="primary-button" href="#">Qabulga yozilish</a>
+                    <a class="primary-button" href="#cta">Qabulga yozilish</a>
                 </div>
                 <img class="hero__img" src="img/hero-img.png" alt="Shifokor rasmi" width="423" height="504"
                     srcset="img/hero-img.png 1x, img/hero-img@2x.png 2x">
@@ -126,20 +126,19 @@
                 </li>
             </ul>
 
-            <a class="primary-button" href="#">Qabulga yozilish</a>
+            <a class="primary-button" href="#cta">Qabulga yozilish</a>
         </section>
         <!-- /SERVICES SECTION -->
 
 
         <!-- CTA SECTION -->
-        <section class="cta">
+        <section class="cta" id="cta">
             <h2 class="cta__heading">Qabulga ro’yxatdan o’ting</h2>
 
             <div class="cta__buttons">
                 <a class="cta__button" href="#">Qo'ng'iroq qilish</a>
                 <a class="cta__button" href="#">Telegramdan yozish</a>
             </div>
-
         </section>
         <!-- /CTA SECTION -->
     </main>
